# ordinator-hypergraph

./: CONTRIBUTING.md  Cargo.toml  README.md
crates/schedule_hypergraph/: Cargo.toml
crates/schedule_hypergraph/src/: derive_instances.rs  schedule_graph.rs
crates/schedule_hypergraph/tests/: large_scale_test.rs
crates/scheduling_environment/: Cargo.toml
crates/scheduling_environment/src/: lib.rs  technician.rs  work_order.rs
crates/strategic_algorithm/src/: lib.rs
tests/: generate_test_data.pl  periods.json  technicians.json  work_orders.json
