[workspace]
members = [
  "./crates/strategic_algorithm",
  "./crates/scheduling_environment",
  "./crates/schedule_hypergraph",
]

[workspace.dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
